[gd_scene load_steps=5 format=3 uid="uid://x40wqdq3mjq"]

[ext_resource type="PackedScene" uid="uid://bcwncpocyashb" path="res://sence/enemy.tscn" id="1_kc25v"]
[ext_resource type="Script" path="res://code/weakest.gd" id="2_2y1v1"]
[ext_resource type="Texture2D" uid="uid://csme47lmjmw3e" path="res://assets/PNG/Effects/star3.png" id="3_ba7w3"]
[ext_resource type="AudioStream" uid="uid://b53u0gm2t4fnw" path="res://assets/sound/sfx_laser1.ogg" id="4_rgc1y"]

[node name="Type01" instance=ExtResource("1_kc25v")]
script = ExtResource("2_2y1v1")

[node name="Enemy" parent="Path2D/PathFollow2D" index="0"]
collision_layer = 16
collision_mask = 2

[node name="PathFollow2D@Enemy@Enemy@CollisionPolygon2D" type="CollisionPolygon2D" parent="Path2D/PathFollow2D/Enemy" index="1"]
polygon = PackedVector2Array(17.1, -39, 27.5, -39, 27.5, -36.7, 51.5, -8.1, 51.5, 6.8, 41.6, 42, 25.5, 42, 25.5, 31, 24.2, 31, 14.4, 27.7, 10.8, 36, -11.5, 36, -11.5, 33.4, -14.2, 27.3, -26.5, 31.4, -26.5, 42, -41.5, 42, -41.5, 41.3, -51.5, 11.3, -51.5, -8, -27.5, -39, -17.1, -39, -12.6, -42, 12.6, -42)

[node name="Marker2D" type="Marker2D" parent="Path2D/PathFollow2D/Enemy" index="2"]
position = Vector2(2.99999, 63)

[node name="Area2D" type="Area2D" parent="Path2D/PathFollow2D/Enemy" index="3"]
collision_layer = 16
collision_mask = 2

[node name="PathFollow2DEnemyEnemyCollisionPolygon2D" type="CollisionPolygon2D" parent="Path2D/PathFollow2D/Enemy/Area2D" index="0"]
polygon = PackedVector2Array(17.1, -39, 27.5, -39, 27.5, -36.7, 51.5, -8.1, 51.5, 6.8, 41.6, 42, 25.5, 42, 25.5, 31, 24.2, 31, 14.4, 27.7, 10.8, 36, -11.5, 36, -11.5, 33.4, -14.2, 27.3, -26.5, 31.4, -26.5, 42, -41.5, 42, -41.5, 41.3, -51.5, 11.3, -51.5, -8, -27.5, -39, -17.1, -39, -12.6, -42, 12.6, -42)

[node name="Explosion" type="CPUParticles2D" parent="Path2D/PathFollow2D" index="1"]
position = Vector2(9.1091, 12.084)
rotation = -0.513385
emitting = false
amount = 30
lifetime = 1.5
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
texture = ExtResource("3_ba7w3")
emission_shape = 1
emission_sphere_radius = 107.66
direction = Vector2(1, 1)
spread = 100.0
gravity = Vector2(0, 100)
initial_velocity_max = 2.22
damping_max = 1.0
angle_min = 10.0
angle_max = 180.0
scale_amount_min = 0.5
scale_amount_max = 1.5
color = Color(0.67451, 0.231373, 0.478431, 1)

[node name="ShootTimer" type="Timer" parent="." index="1"]
wait_time = 0.6
autostart = true

[node name="effect" type="AudioStreamPlayer2D" parent="." index="2"]
stream = ExtResource("4_rgc1y")

[connection signal="body_entered" from="Path2D/PathFollow2D/Enemy/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
